--- a/frontend/src/components/ShopView/ShopView.css
+++ b/frontend/src/components/ShopView/ShopView.css
@@ -74,7 +74,7 @@
   display: grid;
   width: 95vw;
   /* grid-template-columns: 1fr 1fr 1fr; */
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-row-gap: 15px;
   grid-column-gap: 10px;
 }
